Remove wrongly placed assert in tiff export

Previous version of tiff export assumed that if visitor returns
false it means internal error, a bug in the code. Truth is, it can
happen also if the image (or layer) has an unsupported color space.
Hence deletion of the assert and replacement InternalError error code
with just Failure.

BUG:408177